# Cmakelists-tutorial

./: ALL_BUILD.vcxproj  CMAKE_SOURCE_DIR  CMakeCache.txt  CMakelists.txt  GBPJPY_H1.csv  Helloworld.sln  Helloworld.vcxproj  Helloworld.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  defaultconfig.h.in  diamond.py  findingaverage.py  item.py  items.csv  list.py  main.cpp  main.py  main2.cpp  oop.spec  oop_concepts.cpp  phone.py  pymain.py  readcsvfrommt5.py  simple_throw.cpp  tempCodeRunnerFile.py
inc/: calc.hpp  gtst.hpp
lib/: CMakeLists.txt  lib.cpp  lib.hpp
src/: CMakeLists.txt  almostsorted.cpp  ampm2mililtariantime.cpp  arraycomp.cpp  beautiful_day_at_movie.cpp  betweentwosets.cpp  binsearch.hpp  calc.cpp  classgtest.cpp  classtest.cpp  cpp-overloading.cpp  cpp-struct-class.cpp  designer_pdf_viewer.cpp  divsumpairs.cpp  eigenlib.cpp  exception_inhertance.cpp  findigit.cpp  gmktest.cpp  gtest-example.cpp  gtesting1.cpp  gtst.cpp  main.cpp  new-delete.cpp  permutationequation.cpp  problem#1022.cpp  problem#1024.cpp  problem#1025.cpp  problem#1029.cpp  problem#1030.cpp  pymain.py  stringfixing.cpp  tempCodeRunnerFile.cpp  validstring.cpp  viral1advertising.cpp  workbook.cpp
